--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,10 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "nodemon index.js",
-        "build": "npm i",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
+  "dev": "nodemon index.js",
+  "start": "node index.js",
+  "build": "echo \"No build step needed for plain Node.js\""
+},
     "author": "",
     "license": "ISC",
     "dependencies": {
