--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
-MONGO_URL = mongodb://localhost:27017/elearning-platform
+# MONGO_URL = mongodb://localhost:27017/elearning-platform
+
+MONGO_URL = mongodb+srv://nikhiladwani3:Nx60KWR66ethQs03@cluster0.ldnbyk7.mongodb.net/e-learning-platform?retryWrites=true&w=majority&appName=Cluster0
